crates/weft-snapshots/tests/snapshots/react-jsx/example-button.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-button as react-jsx
---
function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen({ data, actions, onChange }) {
  return (
    <main data-weft-id="root" aria-label="Checkout">
      <button data-weft-id="pay" data-state="idle" type="button" disabled={!_on(data?.cartReady)} data-variant="primary" onClick={(_e) => _act(actions, { id: "pay", action: "order.pay" })}>Pay now</button>
    </main>
  );
}
