crates/weft-snapshots/tests/snapshots/react-jsx/example-cell.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-cell as react-jsx
---
import { Fragment } from "react";

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _url(value) {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

function _keyed(list) {
  return list.map((x, i) => <Fragment key={i}>{x}</Fragment>);
}

export default function WeftScreen({ data, actions, onChange }) {
  return (
    <main data-weft-id="root" aria-label="Users">
      {(() => {
        const _cols = [
          (
            <th data-weft-id="col-name" scope="col">Name</th>
          ),
        ];
        const _rows = [
          (
            <tr data-weft-id="row-ana">
              <td data-weft-id="cell-ana">
                <div data-weft-id="ana-name">Ana</div>
                {(() => {
                  const _href = _url("");
                  return (
                    <a data-weft-id="ana-link" href={_href} role={_href === undefined ? "link" : undefined} tabIndex={_href === undefined ? 0 : undefined} onKeyDown={_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "ana-link", action: "users.open" }); } : undefined} onClick={() => _act(actions, { id: "ana-link", action: "users.open" })} style={{ display: "inline-block" }}>View</a>
                  );
                })()}
              </td>
            </tr>
          ),
        ];
        return (
          <table data-weft-id="users" aria-label="Users">
            {_cols.length > 0 ? (
              <thead>
                <tr>
                  {_keyed(_cols)}
                </tr>
              </thead>
            ) : null}
            {_rows.length > 0 ? (
              <tbody>
                {_keyed(_rows)}
              </tbody>
            ) : null}
          </table>
        );
      })()}
    </main>
  );
}
